log/build_2026-01-21_09-28-12/assignment2_rt_py/stderr.log
Sorry: IndentationError: unindent does not match any outer indentation level (robot_controller.py, line 103)
  File "/home/ubuntu/ros_workspace/install/assignment2_rt_py/lib/python3.12/site-packages/assignment2_rt_py/distance_calc.py", line 72
    else self.lidar <= self.threshold_:
         ^^^^
SyntaxError: expected ':'

  File "/home/ubuntu/ros_workspace/install/assignment2_rt_py/lib/python3.12/site-packages/assignment2_rt_py/turtlesim_services.py", line 14
    self.threshold_srv = 
                         ^
SyntaxError: invalid syntax

